--- a/Dockerfile.purple
+++ b/Dockerfile.purple
@@ -16,6 +16,7 @@ RUN pip install uv
 # Copy project files
 COPY pyproject.toml .
 COPY src/ ./src/
+COPY scripts/ ./scripts/
 
 # Install the package
 RUN uv pip install --system -e ".[dev]"
@@ -27,6 +28,7 @@ EXPOSE 8001
 ENV PYTHONUNBUFFERED=1
 ENV HOST=0.0.0.0
 ENV PORT=8001
+ENV PYTHONPATH=/app/src:/app
 
 # Run the Purple Agent server
 CMD ["purple-agent", "serve", "--host", "0.0.0.0", "--port", "8001"]
