--- a/Dockerfile.mcp-sandbox
+++ b/Dockerfile.mcp-sandbox
@@ -4,8 +4,9 @@ WORKDIR /app
 # Install minimal deps
 RUN pip install fastmcp numpy pandas scipy yfinance
 
-# Copy sandbox server code
-COPY src/mcp_servers/sandbox.py /app/sandbox.py
+COPY src/ ./src/
+ENV PYTHONPATH=/app/src
+RUN apt-get update && apt-get install -y --no-install-recommends wget && rm -rf /var/lib/apt/lists/*
 
 EXPOSE 8000
-CMD ["python", "/app/sandbox.py"]
+CMD ["fastmcp", "run", "src/mcp_servers/sandbox.py:create_sandbox_server", "--transport", "http", "--host", "0.0.0.0", "--port", "8000"]
