--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,13 +12,14 @@ services:
       - TOKEN_TRACKING_ENABLED=true
       - NOISE_INJECTION_RATIO=0.3
       - TEMPORAL_LOCK_ENABLED=true
+      - FASTMCP_TRANSPORT=http
     volumes:
       - edgar-cache:/data/edgar_cache
     ports:
       - "8101:8000"
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD", "python", "-c", "import socket; s=socket.create_connection(('localhost',8000),2); s.close()"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -33,13 +34,14 @@ services:
       - YFINANCE_CACHE_DIR=/data/yf_cache
       - TIME_MACHINE_ENABLED=true
       - LOOKAHEAD_DETECTION=true
+      - FASTMCP_TRANSPORT=http
     volumes:
       - yfinance-cache:/data/yf_cache
     ports:
       - "8102:8000"
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD", "python", "-c", "import socket; s=socket.create_connection(('localhost',8000),2); s.close()"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -53,6 +55,7 @@ services:
     environment:
       - EXECUTION_TIMEOUT=30
       - PRELOAD_LIBS=numpy,pandas,scipy,yfinance
+      - FASTMCP_TRANSPORT=http
     security_opt:
       - no-new-privileges:true
     cap_drop:
@@ -63,7 +66,7 @@ services:
       - "8103:8000"
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD", "python", "-c", "import socket; s=socket.create_connection(('localhost',8000),2); s.close()"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -75,9 +78,9 @@ services:
       dockerfile: Dockerfile
     container_name: fab-plus-orchestrator
     environment:
-      - MCP_EDGAR_URL=http://sec-edgar-mcp:8000
-      - MCP_YFINANCE_URL=http://yahoo-finance-mcp:8000
-      - MCP_SANDBOX_URL=http://mcp-sandbox:8000
+      - MCP_EDGAR_URL=http://sec-edgar-mcp:8000/mcp
+      - MCP_YFINANCE_URL=http://yahoo-finance-mcp:8000/mcp
+      - MCP_SANDBOX_URL=http://mcp-sandbox:8000/mcp
       - A2A_PROTOCOL_VERSION=1.0
       - LLM_PROVIDER=${LLM_PROVIDER:-openai}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
@@ -106,9 +109,9 @@ services:
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
       - LLM_MODEL=${LLM_MODEL:-gpt-4o}
       - SIMULATION_DATE=${SIMULATION_DATE:-}
-      - MCP_EDGAR_URL=http://sec-edgar-mcp:8000
-      - MCP_YFINANCE_URL=http://yahoo-finance-mcp:8000
-      - MCP_SANDBOX_URL=http://mcp-sandbox:8000
+      - MCP_EDGAR_URL=http://sec-edgar-mcp:8000/mcp
+      - MCP_YFINANCE_URL=http://yahoo-finance-mcp:8000/mcp
+      - MCP_SANDBOX_URL=http://mcp-sandbox:8000/mcp
     ports:
       - "8001:8001"
     healthcheck:
