use alphavantage api to generate data

--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,7 @@ ALPHA_SCORE_ENABLED=true
 
 # Logging level (DEBUG, INFO, WARNING, ERROR)
 LOG_LEVEL=INFO
+
+# AlphaVantage API Key (get from https://www.alphavantage.co/support/#api-key)
+# Required for synthetic benchmark generation
+ALPHAVANTAGE_API_KEY=your_api_key_here
