Add crypto trading benchmark to production eval config
- Add crypto dataset to eval_config.yaml with 2 scenarios
- Add volatile_btc_window scenario with clear RSI signals
- Update Dockerfile.green to include crypto scenarios data
- Crypto benchmark tests adversarial robustness (flash crashes, noise)

--- a/Dockerfile.green
+++ b/Dockerfile.green
@@ -15,6 +15,7 @@ COPY --chown=agent:agent src src
 # Note: PyTorch/sentence-transformers removed - using LLM for semantic similarity instead
 COPY --chown=agent:agent data/options data/options
 COPY --chown=agent:agent data/synthetic_questions data/synthetic_questions
+COPY --chown=agent:agent data/crypto/scenarios data/crypto/scenarios
 COPY --chown=agent:agent finance-agent/data/public.csv finance-agent/data/public.csv
 COPY --chown=agent:agent config config
 
