--- a/config/eval_config.yaml
+++ b/config/eval_config.yaml
@@ -29,6 +29,36 @@ datasets:
     shuffle: false
     weight: 1.0
 
+  - type: crypto
+    path: data/crypto/scenarios
+    download_on_missing: false
+    limit: 2
+    shuffle: false
+    weight: 1.0
+    stride: 1
+    max_steps: 20
+    evaluation:
+      initial_balance: 10000.0
+      max_leverage: 3.0
+      trading_fee: 0.0004
+      price_noise_level: 0.001
+      slippage_range: [0.0002, 0.0010]
+      adversarial_injection_rate: 0.05
+      decision_interval: 1
+      funding_interval_hours: 8.0
+      score_weights:
+        baseline: 0.5
+        noisy: 0.3
+        adversarial: 0.2
+        meta: 0.0
+      metric_weights:
+        sharpe: 0.50
+        total_return: 0.25
+        max_drawdown: 0.15
+        win_rate: 0.10
+      meta_transforms:
+        - identity
+
 sampling:
   strategy: stratified
   total_limit: 30
