Add GitHub PAT authentication for private eval data repo
- Add _get_github_auth_header() to read EVAL_DATA_PAT from environment
- Add _create_url_request() to attach auth headers for GitHub URLs
- Add _build_github_raw_url() helper for constructing raw URLs
- Update _load_manifest() to use authenticated requests
- Update _download_to_path() to use authenticated requests
- Auto-construct manifest URL from EVAL_DATA_REPO if not explicitly set
- Document EVAL_DATA_REPO and EVAL_DATA_PAT in .env.example

This enables the Green Agent to fetch hidden crypto scenarios from
private GitHub repos like yxc20089/agentbusters-eval-data.

--- a/.env.example
+++ b/.env.example
@@ -50,6 +50,10 @@ PURPLE_DATABASE_URL=sqlite+aiosqlite:///purple_tasks.db
 # EVAL_LLM_MODEL=gpt-4o-mini
 # EVAL_LLM_TEMPERATURE=0.0
 
+# Private Evaluation Data Repository (for hidden crypto scenarios)
+# EVAL_DATA_REPO=yxc20089/agentbusters-eval-data
+# EVAL_DATA_PAT=ghp_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
 # Enable temporal locking (prevents look-ahead bias)
 TEMPORAL_LOCK_ENABLED=true
 
