--- a/config/eval_config.yaml
+++ b/config/eval_config.yaml
@@ -30,8 +30,8 @@ datasets:
     weight: 1.0
 
   - type: crypto
-    path: data/crypto/scenarios
-    download_on_missing: false
+    path: data/crypto/cache  # Cache dir for downloaded scenarios
+    download_on_missing: true  # Download from EVAL_DATA_REPO
     limit: 2
     shuffle: false
     weight: 1.0
