--- a/Dockerfile.purple
+++ b/Dockerfile.purple
@@ -18,6 +18,9 @@ COPY pyproject.toml .
 COPY src/ ./src/
 COPY scripts/ ./scripts/
 
+# Copy FAB benchmark data for public_csv questions
+COPY finance-agent/data/public.csv ./data/public.csv
+
 # Install only the dependencies needed for Purple Agent (no PyTorch/sentence-transformers)
 RUN uv pip install --system \
     httpx>=0.25.0 \
@@ -54,6 +57,7 @@ ENV PYTHONUNBUFFERED=1
 ENV HOST=0.0.0.0
 ENV PORT=9110
 ENV PYTHONPATH=/app/src:/app
+ENV FAB_DATA_PATH=/app/data/public.csv
 
 # Run the Purple Agent server (ENTRYPOINT + CMD for docker-compose compatibility)
 ENTRYPOINT ["purple-agent", "serve"]
