--- a/config/eval_all.yaml
+++ b/config/eval_all.yaml
@@ -1,5 +1,5 @@
 # AgentBusters All-Dataset Evaluation Configuration
-# Includes: BizFinBench, public.csv, options, crypto, GDPVal
+# Includes: BizFinBench, PRBench, options, crypto, GDPVal
 # Note: crypto hidden data must be available at data/crypto/hidden.
 
 name: "AgentBusters All Datasets Evaluation"
@@ -37,9 +37,9 @@ datasets:
     shuffle: false
     weight: 1.0
 
-  - type: public_csv
-    path: finance-agent/data/public.csv
-    categories: null
+  - type: prbench
+    splits: [finance, legal, finance_hard, legal_hard]
+    topics: null
     limit: 30
     shuffle: false
     weight: 1.0
