--- a/config/eval_full.yaml
+++ b/config/eval_full.yaml
@@ -29,10 +29,10 @@ datasets:
     shuffle: false
     weight: 1.0  # Higher weight = more samples
 
-  # public.csv dataset
-  - type: public_csv
-    path: finance-agent/data/public.csv
-    categories: null  # null = all categories
+  # PRBench dataset (professional reasoning)
+  - type: prbench
+    splits: [finance, legal, finance_hard, legal_hard]
+    topics: null  # null = all topics
     limit: 100
     shuffle: false
     weight: 2.0
