--- a/config/eval_quick.yaml
+++ b/config/eval_quick.yaml
@@ -21,8 +21,8 @@ datasets:
     shuffle: false
     weight: 1.0
 
-  - type: public_csv
-    path: finance-agent/data/public.csv
+  - type: prbench
+    splits: [finance, legal]
     limit: 10
     shuffle: false
     weight: 2.0
