--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,54 @@
 # CIO-Agent FAB++ Environment Configuration
 # Copy this file to .env and fill in your values
+# See docs/BENCHMARK_GUIDE.md for detailed usage instructions
 
 # LLM Provider Configuration
 # Options: openai, anthropic
 LLM_PROVIDER=openai
 
-# --- Option 1: Local vLLM (openai/gpt-oss-20b) ---
-# Uncomment these 3 lines to use local vLLM model
+# ============================================
+# Option 1: Local vLLM (GPU Server - Recommended for benchmarking)
+# ============================================
+# Start vLLM server first:
+#   vllm serve meta-llama/Llama-3.1-70B-Instruct --port 8000
+# Then uncomment:
 # OPENAI_API_KEY=dummy
 # OPENAI_API_BASE=http://localhost:8000/v1
-# OPENAI_BASE_URL=http://localhost:8000/v1  # alias for OPENAI_API_BASE
-# LLM_MODEL=openai/gpt-oss-20b
+# OPENAI_BASE_URL=http://localhost:8000/v1
+# LLM_MODEL=meta-llama/Llama-3.1-70B-Instruct
 
-# --- Option 2: OpenAI API ---
-# Uncomment these lines to use OpenAI
+# Alternative open-source models for vLLM:
+# LLM_MODEL=meta-llama/Llama-3.1-8B-Instruct     # Smaller, faster
+# LLM_MODEL=Qwen/Qwen2.5-72B-Instruct            # Strong Chinese support
+# LLM_MODEL=Qwen/Qwen2.5-32B-Instruct            # Medium size
+# LLM_MODEL=mistralai/Mixtral-8x22B-Instruct-v0.1
+# LLM_MODEL=deepseek-ai/DeepSeek-V2.5
+
+# ============================================
+# Option 2: OpenRouter API (Access many open-source models)
+# ============================================
+# Get API key from https://openrouter.ai/keys
+# OPENAI_API_KEY=sk-or-v1-xxxxxxxxxxxxx
+# OPENAI_API_BASE=https://openrouter.ai/api/v1
+# LLM_MODEL=meta-llama/llama-3.1-70b-instruct
+# Alternative models via OpenRouter:
+# LLM_MODEL=qwen/qwen-2.5-72b-instruct
+# LLM_MODEL=deepseek/deepseek-chat
+# LLM_MODEL=deepseek/deepseek-reasoner
+# LLM_MODEL=mistralai/mixtral-8x22b-instruct
+
+# ============================================
+# Option 3: OpenAI API
+# ============================================
 OPENAI_API_KEY=sk-...
 LLM_MODEL=gpt-4o
 
-# --- Option 3: Anthropic API ---
-# Uncomment these lines to use Anthropic
+# ============================================
+# Option 4: Anthropic API
+# ============================================
 # LLM_PROVIDER=anthropic
 # ANTHROPIC_API_KEY=sk-ant-...
-# LLM_MODEL=claude-3.5-sonnet
+# LLM_MODEL=claude-sonnet-4-20250514
 
 # Purple Agent LLM Temperature
 # Set to 0.0 for reproducible benchmark results (deterministic outputs)
