--- a/config/eval_medium.yaml
+++ b/config/eval_medium.yaml
@@ -96,6 +96,8 @@ sampling:
 llm_eval:
   enabled: true
   model: Qwen/Qwen3-32B
+  api_base: http://localhost:8100/v1  # 使用本地 vLLM 服务
+  api_key: dummy                       # vLLM 不需要真实 key
   temperature: 0.0
 
 debate: false
