--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,9 +22,9 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
 dependencies = [
-    "httpx>=0.25.0",
-    "pydantic>=2.12.5",
-    "openai>=2.16.0",  # Requires >=2.16.0 for httpx 0.28+ compatibility (proxy vs proxies)
+    "httpx==0.27.2",
+    "pydantic==2.12.5",
+    "openai==2.16.0",  # Requires >=2.16.0 for httpx 0.28+ compatibility (proxy vs proxies)
     "anthropic>=0.18.0",
     "tiktoken==0.8.0",
     "numpy>=1.24.0",
@@ -42,14 +42,14 @@ dependencies = [
     # A2A Protocol Support (updated for AgentBeats compatibility)
     # Note: removed sql extra and aiosqlite to use in-memory task storage (avoids SQLite conflicts)
     "a2a-sdk[http-server]>=0.3.20",
-    "fastapi>=0.100.0",
+    "fastapi==0.115.6",
     "uvicorn==0.38.0",
-    "sqlalchemy>=2.0.0",
+    "sqlalchemy==2.0.35",
     # MCP Protocol Support
     "fastmcp>=2.0.0",
     # HuggingFace datasets for dynamic benchmark retrieval
-    "datasets>=4.0.0",  # Requires >=4.0.0 to fix dataclass compatibility issues
-    "huggingface-hub>=1.0.0",  # Ensure compatible version with datasets
+    "datasets==4.0.0",  # Requires >=4.0.0 to fix dataclass compatibility issues
+    "huggingface-hub==1.0.0",  # Ensure compatible version with datasets
     # Tavily for web search MCP tools - fixed version to avoid dependency conflicts
     "tavily-python==0.7.20",
     "openpyxl>=3.1.5",
