--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
 dependencies = [
-    "httpx>=0.28.1",
+    "httpx==0.28.1",
     "pydantic==2.12.5",
     "openai==2.16.0",  # Requires >=2.16.0 for httpx 0.28+ compatibility (proxy vs proxies)
     "anthropic==0.37.2",
@@ -41,7 +41,7 @@ dependencies = [
     "click==8.1.8",
     # A2A Protocol Support (updated for AgentBeats compatibility)
     # Note: removed sql extra and aiosqlite to use in-memory task storage (avoids SQLite conflicts)
-    "a2a-sdk[http-server]>=0.3.20",
+    "a2a-sdk[http-server]==0.3.20",
     "fastapi==0.115.6",
     "uvicorn==0.38.0",
     "sqlalchemy==2.0.35",
@@ -61,7 +61,7 @@ dev = [
     "pytest==8.3.3",
     "pytest-asyncio==1.2.0",
     "pytest-cov==4.1.0",
-    "black>=23.0.0",
+    "black==23.12.1",
     "ruff==0.6.9",
     "mypy==1.5.0",
 ]
