--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,12 @@ license = {text = "MIT"}
 authors = [
     {name = "AgentBusters Team"}
 ]
-requires-python = ">=3.11"
+requires-python = ">=3.10"
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Science/Research",
     "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
