--- a/.env.example
+++ b/.env.example
@@ -97,7 +97,19 @@ PURPLE_DATABASE_URL=sqlite+aiosqlite:///purple_tasks.db
 # MCP_SANDBOX_URL=http://localhost:8103
 
 # Evaluation Settings
-# LLM-as-judge for dataset evaluators (bizfinbench/public_csv)
+# LLM-as-judge for dataset evaluators (bizfinbench/prbench/gdpval)
+# 
+# For separate evaluator API (e.g., use OpenAI for LLM-as-judge while Purple Agent uses vLLM):
+# OPENAI_EVAL_API_KEY=sk-...           # OpenAI API key for evaluator (priority over OPENAI_API_KEY)
+# OPENAI_EVAL_API_BASE=https://api.openai.com/v1  # Optional: defaults to OpenAI
+#
+# Or configure in eval_*.yaml:
+#   llm_eval:
+#     enabled: true
+#     model: gpt-4o-mini
+#     api_base: https://api.openai.com/v1
+#     temperature: 0.0
+#
 # EVAL_USE_LLM=true
 # EVAL_LLM_MODEL=gpt-4o-mini
 # EVAL_LLM_TEMPERATURE=0.0
