change options questions ground truth and use hybrid evaluate method for options evaluation, save the interactions for crypto trading between green and purple agent

--- a/.env.example
+++ b/.env.example
@@ -145,6 +145,11 @@ ALPHA_SCORE_ENABLED=true
 # Logging level (DEBUG, INFO, WARNING, ERROR)
 LOG_LEVEL=INFO
 
+# Record detailed interactions during crypto benchmark evaluation
+# Set to "1" to save Green/Purple Agent message exchanges to results
+# Useful for debugging trading decisions
+RECORD_INTERACTIONS=0
+
 # AlphaVantage API Key (get from https://www.alphavantage.co/support/#api-key)
 # Required for synthetic benchmark generation
 ALPHAVANTAGE_API_KEY=your_api_key_here
