--- a/config/eval_quick_test.yaml
+++ b/config/eval_quick_test.yaml
@@ -5,25 +5,60 @@ name: "Quick Test"
 version: "1.0"
 
 datasets:
-  - type: bizfinbench
-    task_types:
-      - event_logic_reasoning
-    languages: [en]
-    limit_per_task: 2
-    shuffle: false
-    weight: 1.0
+  # - type: bizfinbench
+  #   task_types:
+  #     - event_logic_reasoning
+  #     - financial_quantitative_computation
+  #     - anomaly_information_tracing
+  #   languages: [en]
+  #   limit_per_task: 6
+  #   shuffle: false
+  #   weight: 1.0
 
-  - type: synthetic
-    path: data/synthetic_questions/questions.json
-    limit: 3
-    shuffle: false
-    weight: 1.0
+  # # BizFinBench Chinese
+  # - type: bizfinbench
+  #   task_types:
+  #     - event_logic_reasoning
+  #     - financial_data_description
+  #     - financial_report_analysis
+  #   languages: [cn]
+  #   limit_per_task: 4
+  #   shuffle: false
+  #   weight: 1.0
 
-  - type: options
-    path: data/options/questions.json
-    limit: 3
-    shuffle: false
-    weight: 1.0
+  # # PRBench - Multi-domain reasoning
+  # - type: prbench
+  #   splits: [finance, legal]
+  #   limit: 15
+  #   shuffle: false
+  #   weight: 1.0
+
+  # # Synthetic Questions - Analytical reasoning
+  # - type: synthetic
+  #   path: data/synthetic_questions/questions.json
+  #   limit: 20
+  #   shuffle: false
+  #   weight: 1.0
+  
+  # # GDPVal - Professional tasks
+  # - type: gdpval
+  #   hf_dataset: "openai/gdpval"
+  #   limit: 10
+  #   shuffle: false
+  #   weight: 1.0
+  #   include_reference_files: true
+
+  # - type: synthetic
+  #   path: data/synthetic_questions/questions.json
+  #   limit: 3
+  #   shuffle: false
+  #   weight: 1.0
+
+  # - type: options
+  #   path: data/options/questions.json
+  #   limit: 3
+  #   shuffle: false
+  #   weight: 1.0
 
   - type: crypto
     path: ../agentbusters-eval-data/crypto/eval_hidden
@@ -31,8 +66,8 @@ datasets:
     limit: 2
     shuffle: false
     weight: 1.0
-    stride: 1
-    max_steps: 50
+    stride: 5           # Use every 5th bar (effectively 5-minute bars)
+    max_steps: 300      # 300 * 5 = 1500 minutes ≈ 25 hours of data
     evaluation:
       initial_balance: 10000.0
       max_leverage: 3.0
@@ -40,7 +75,7 @@ datasets:
       price_noise_level: 0.001
       slippage_range: [0.0002, 0.0010]
       adversarial_injection_rate: 0.05
-      decision_interval: 10  # Faster: decide every 10 steps
+      decision_interval: 10  # Decide every 10 steps (every 50 minutes)
       funding_interval_hours: 8.0
       score_weights:
         baseline: 0.50
@@ -57,12 +92,14 @@ datasets:
 
 sampling:
   strategy: stratified
-  total_limit: 10
+  total_limit: 1
   seed: 42
 
 llm_eval:
   enabled: true
-  model: Qwen/Qwen3-32B
+  model: gpt-4o-mini
+  api_base: https://api.openai.com/v1
+  api_key: ${OPENAI_EVAL_API_KEY}
   temperature: 0.0
 
 debate: false
