--- a/.env.example
+++ b/.env.example
@@ -80,10 +80,30 @@ LLM_MODEL=gpt-4o
 # ANTHROPIC_API_KEY=sk-ant-...
 # LLM_MODEL=claude-sonnet-4-20250514
 
+# ============================================
+# Option 5: Google Gemini API
+# ============================================
+# Method 1: Via OpenRouter (Recommended, easiest)
+# OPENAI_API_KEY=sk-or-v1-xxxxxxxxxxxxx
+# OPENAI_API_BASE=https://openrouter.ai/api/v1
+# LLM_MODEL=google/gemini-2.0-flash-exp:free
+# LLM_MODEL=google/gemini-pro-1.5
+
+# Method 2: Direct Google AI Studio API
+# Get API key from https://aistudio.google.com/apikey
+# OPENAI_API_KEY=your-google-ai-studio-api-key
+# OPENAI_API_BASE=https://generativelanguage.googleapis.com/v1beta/openai/
+# LLM_MODEL=gemini-2.0-flash-exp
+# LLM_MODEL=gemini-1.5-pro
+
 # Purple Agent LLM Temperature
 # Set to 0.0 for reproducible benchmark results (deterministic outputs)
 # Higher values (e.g., 0.3) allow more creative responses but reduce reproducibility
 PURPLE_LLM_TEMPERATURE=0.0
+
+# Purple Agent max tool calls per task
+# Maximum number of tool invocations before giving up (default: 25)
+PURPLE_MAX_TOOL_CALLS=25
 
 # Database Configuration (for persistent task storage)
 # SQLite (local dev): use separate files to avoid lock conflicts
